...

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:liftOnScrollTargetViewId="@id/nsv_content"
            app:liftOnScroll="true">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:clickable="true"
...
