<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_fragment"
        android:icon="@drawable/selector_home"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/feed_fragment"
        android:icon="@drawable/selector_feed"
        android:title="@string/nav_feed" />

    <item
        android:id="@+id/library_fragment"
        android:icon="@drawable/selector_library"
        android:title="@string/nav_library" />

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/selector_profile"
        android:title="@string/nav_profile" />

</menu>