<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="io.github.drumber.kitsune.data.presentation.model.media.Media" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_description"
            android:layout_marginBottom="10dp"
            style="?attr/textAppearanceHeadlineSmall" />

        <at.blogc.android.views.ExpandableTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            tools:text="@tools:sample/lorem/random"
            android:text="@{data.description}"
            android:maxLines="5"
            android:ellipsize="end"
            app:actionButton="@{btnExpandCollapse}"
            app:animation_duration="200"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_expand_collapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_read_more"
            android:layout_gravity="end"
            style="?attr/borderlessButtonStyle" />

    </LinearLayout>

</layout>